make chango to fix the contrast problem: change text color to white, remove opacity on images, remove useless background image

--- a/style.css
+++ b/style.css
@@ -80,21 +80,6 @@ a:hover {
     background: top no-repeat;
 }
 
-.bloc-bg-texture::before {
-    content: "";
-    background-size: 2px 2px;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-}
-
-.texture-paper::before {
-    background: url("img/texture-paper.png");
-    background-size: 280px 280px;
-}
-
 .b-parallax {
     background-attachment: fixed;
 }
@@ -195,7 +180,7 @@ a:hover {
 
 .d-bloc .panel,
 .l-bloc {
-    color: rgba(0, 0, 0, .5);
+    color: rgba(0, 0, 0);
 }
 
 .d-bloc .panel button:hover,
@@ -775,7 +760,7 @@ h4 {
 }
 
 .tc-white {
-    color: #953e00!important;
+    color: #FFFFFF!important;
 }
 
 .btn-atomic-tangerine {
